[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
mio = { version = "0.8.8", features = ["os-poll", "net"] }
slab = "0.4.8"

shared = { path = "../shared/" }
