[package]
name = "sync-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
log = { path = "../log" }

[build-dependencies]
roc_app = { path = "../roc_app" }
cc = "1.0"
